--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ position: absolute;
 overflow: hidden auto;
  display: block;
  top: 37px;
- left: 23px;
+ left: 24px;
  height: 624px;
  width: 351px;
 }
@@ -82,7 +82,7 @@ height: 100%;
   background-color: #FFF;
   display: block;
   box-shadow: 0px 10px 10px -10px rgba(227,227,227,1);
-  position: fixed;
+  position: absolute;
 }
 
 .burger-icon img {
